# promptdb

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  TODO.md  pyproject.toml  render.yaml
.github/workflows/: evals.yml  test.yml
docs/: ARCHITECTURE.md  CONNECTOR.md  DESIGN.md  PRODUCT.md
evals/: __init__.py  compare_models.py  dataset.py  evaluators.py  run_evals.py  run_spider.py
examples/: README.md  byo_database.py  claude_desktop_config.json  quickstart.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DataSourcePicker.tsx  FlowRail.tsx  ModelPicker.tsx  ProviderPicker.tsx  ResultTable.tsx  SchemaBlueprint.tsx
frontend/lib/: api.ts  types.ts
scripts/: check-secrets.sh  mcp_client_demo.py
src/promptdb/: __init__.py
src/promptdb/agent/: __init__.py  graph.py  guardrails.py  providers.py  state.py
src/promptdb/agent/nodes/: __init__.py
src/promptdb/api/: __init__.py  limits.py  main.py  remote_db.py  sample_seed.py
src/promptdb/cli/: __init__.py  main.py
src/promptdb/data/: __init__.py  profile.py  quality.py  schema_graph.py
src/promptdb/db/: connection.py  schema_index.py
src/promptdb/mcp_server/: __init__.py  server.py
src/promptdb/observability/: __init__.py  cost.py  tracing.py
tests/: test_data.py  test_guardrails.py  test_limits.py  test_providers.py  test_remote_db.py  test_smoke.py
web/: index.html
