[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptdb"
version = "0.1.0"
description = "Ask your database in English — a production text-to-SQL agent built on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph==1.2.4",
    "langchain==1.3.4",
    "langchain-anthropic==1.4.4",
    "langchain-community==0.4.2",
    "mcp==1.27.2",
    "langsmith==0.8.9",
    "SQLAlchemy>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "datasets>=2.0", "huggingface_hub>=0.20"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
providers = ["langchain-openai>=0.3", "langchain-ollama>=0.2"]

[project.scripts]
promptdb = "promptdb.cli.main:app"
promptdb-mcp = "promptdb.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/promptdb"]

[tool.ruff]
line-length = 100
